[gd_scene load_steps=16 format=3 uid="uid://b68umguhxojc4"]

[ext_resource type="Script" path="res://Player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dtt71ieqvwkik" path="res://pod.png" id="2_3rhr1"]
[ext_resource type="Texture2D" uid="uid://ubfifa21byjj" path="res://hammer.png" id="3_d3uw7"]
[ext_resource type="Texture2D" uid="uid://c4kxvb3spmd1k" path="res://jetflame/frame0000.png" id="4_gcu60"]
[ext_resource type="Texture2D" uid="uid://didso24dqdwde" path="res://jetflame/frame0001.png" id="5_tlany"]
[ext_resource type="Texture2D" uid="uid://c2mop6hni4u8d" path="res://jetflame/frame0002.png" id="6_3owii"]
[ext_resource type="Texture2D" uid="uid://djk0aeyj1dqag" path="res://jetflame/frame0003.png" id="7_igrdd"]
[ext_resource type="Texture2D" uid="uid://dxw6xk38o2sex" path="res://jetflame/frame0004.png" id="8_fijm5"]
[ext_resource type="Texture2D" uid="uid://c5ii3sjyn5vx4" path="res://jetflame/frame0005.png" id="9_7rv64"]
[ext_resource type="Texture2D" uid="uid://bqcnj4rh430e3" path="res://jetflame/frame0006.png" id="10_l5xx4"]
[ext_resource type="Texture2D" uid="uid://wxnwcdxcylkd" path="res://jetflame/frame0007.png" id="11_nohls"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(42, 43)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_atqcr"]
friction = 0.65
bounce = 0.1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h8aei"]
radius = 10.1
height = 41.4

[sub_resource type="SpriteFrames" id="SpriteFrames_puxqw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_gcu60")
}, {
"duration": 1.0,
"texture": ExtResource("5_tlany")
}, {
"duration": 1.0,
"texture": ExtResource("6_3owii")
}, {
"duration": 1.0,
"texture": ExtResource("7_igrdd")
}, {
"duration": 1.0,
"texture": ExtResource("8_fijm5")
}, {
"duration": 1.0,
"texture": ExtResource("9_7rv64")
}, {
"duration": 1.0,
"texture": ExtResource("10_l5xx4")
}, {
"duration": 1.0,
"texture": ExtResource("11_nohls")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="RigidBody2D"]
position = Vector2(320, 192)
mass = 3.06122
linear_damp = 4.0
script = ExtResource("1")
max_speed = 120
control_linear_damp = 8
control_angular_damp = 8
gravity_resist = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("1")

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
z_index = -1
polygon = PackedVector2Array(-25, -25, 0, -34, 25, -25, 25, 25, -25, 25)

[node name="DashTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PinJoint2D" type="PinJoint2D" parent="."]
node_a = NodePath("..")
node_b = NodePath("../Hammer")
bias = 0.9

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-0.04, 12)
scale = Vector2(0.162, 0.162)
texture = ExtResource("2_3rhr1")

[node name="Hammer" type="RigidBody2D" parent="."]
show_behind_parent = true
position = Vector2(0, 67)
physics_material_override = SubResource("PhysicsMaterial_atqcr")
center_of_mass_mode = 1
center_of_mass = Vector2(0, 15)
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hammer"]
position = Vector2(0, 15.265)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_h8aei")

[node name="Polygon2D" type="Polygon2D" parent="Hammer"]
visible = false
position = Vector2(0, 8)
polygon = PackedVector2Array(-24, -8, 24, -8, 29, 8, 24, 24, -24, 24, -30, 8)

[node name="Polygon2D2" type="Polygon2D" parent="Hammer"]
visible = false
position = Vector2(-0.499996, 9.14286)
scale = Vector2(0.6875, 1.14286)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(8, -8, -8, -8, -8, -64, 8, -64)

[node name="Sprite2D" type="Sprite2D" parent="Hammer"]
position = Vector2(0, -67)
scale = Vector2(0.17909, 0.17909)
texture = ExtResource("3_d3uw7")

[node name="MainJet" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(0, 83)
scale = Vector2(0.0884141, 0.0884141)
sprite_frames = SubResource("SpriteFrames_puxqw")
autoplay = "default"
frame_progress = 0.801249
speed_scale = 5.0

[node name="TopLeftJet" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(-10, -49)
rotation = 3.14159
scale = Vector2(0.0884141, 0.0884141)
sprite_frames = SubResource("SpriteFrames_puxqw")
autoplay = "default"
frame_progress = 0.801249
speed_scale = 5.0

[node name="UpperLeftJet" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(-41, -31)
rotation = 1.57079
scale = Vector2(0.0884141, 0.0884141)
sprite_frames = SubResource("SpriteFrames_puxqw")
autoplay = "default"
frame_progress = 0.801249
speed_scale = 5.0

[node name="LowerLeftJet" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(-40, 34)
rotation = 1.57079
scale = Vector2(0.0884141, 0.0884141)
sprite_frames = SubResource("SpriteFrames_puxqw")
autoplay = "default"
frame_progress = 0.801249
speed_scale = 5.0

[node name="TopRightJet" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(11, -49)
rotation = 3.14159
scale = Vector2(0.0884141, 0.0884141)
sprite_frames = SubResource("SpriteFrames_puxqw")
autoplay = "default"
frame_progress = 0.801249
speed_scale = 5.0
flip_h = true

[node name="UpperRightJet" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(40, -31)
rotation = 4.71238
scale = Vector2(0.0884141, 0.0884141)
sprite_frames = SubResource("SpriteFrames_puxqw")
autoplay = "default"
frame_progress = 0.801249
speed_scale = 5.0
flip_h = true

[node name="LowerRightJet" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(41, 33)
rotation = 4.71238
scale = Vector2(0.0884141, 0.0884141)
sprite_frames = SubResource("SpriteFrames_puxqw")
autoplay = "default"
frame_progress = 0.801249
speed_scale = 5.0
flip_h = true

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
